--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Tag selector to select the 'body' element */
-body {
-  /#00b3e6/
+body {  
+  background: #00b3e6
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
@@ -10,7 +10,7 @@ div {
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
-  /* Your code here! */
+ margin: auto
   color:red;
 }
 
