--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ div {
   width: 700px;
   margin: auto;
   font-family: "Helvetica Neue";
-  background: white
-  padding: 30px;
+  background: white;
+  padding: 30px
 }
 
 /* ID selector to select the element with id 'main-header' */
@@ -20,5 +20,5 @@ div {
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
-  /* Your code here! */
+ font-size: italic
 }
